kube-angular.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-angular-app
  labels:
    run: demo-angular-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    run: demo-angular-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-angular-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: demo-angular-app
    spec:
      containers:
      - name: demo-angular-app
        image: saneeshnair/demo-angular-app
        ports:
        - containerPort: 80
        - containerPort: 443
